fix home artworks button small screen

--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -578,6 +578,7 @@ nav {
     @include breakpoint(medium) {
         font-size: 4vw;
         margin-right: 40vw;
+        margin-left: 10vw;
     }
  }
 
